# cbh-plataforma-de-obras

./: .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml
backend/: .env.example  Dockerfile  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  dependencies.py  main.py  seed.py
backend/app/models/: __init__.py  banco.py  carregamento.py  config.py  ferramenta.py  fornecedor.py  funcionario_rh.py  insumo.py  lancamento.py  montagem.py  movimentacao_estoque.py  obra.py  processo.py  solicitacao.py  solicitacao_compra.py  usuario.py
backend/app/routers/: auth.py  autorizacao.py  bancos.py  carregamentos.py  dashboard.py  fabrica.py  ferramentas.py  fornecedores.py  funcionarios_rh.py  insumos.py  lancamentos.py  montagens.py  movimentacoes_estoque.py  obras.py  processos.py  solicitacoes.py  solicitacoes_compra.py  usuarios.py
backend/app/schemas/: auth.py  banco.py  carregamento.py  ferramenta.py  fornecedor.py  funcionario_rh.py  insumo.py  lancamento.py  montagem.py  movimentacao_estoque.py  obra.py  processo.py  solicitacao.py  solicitacao_compra.py  usuario.py
backend/app/services/: autorizacao.py  carregamento.py  compras.py  fabrica.py
backend/tests/: conftest.py  test_auth.py
docs/: PRD.md  backend-roadmap.md  design-system.md  entidades.md  permissoes.md  workflows.md
docs/negocio/: 00-visao-geral.md  01-autenticacao.md  02-autorizacao.md  03-fabrica.md  04-obra.md  05-compras.md  06-financeiro.md  07-rh.md  (+1 more)
src/: index.css  main.tsx  router.tsx
(+58 files in other folders)
